--- a/04-Data_Preprocessing.ipynb
+++ b/04-Data_Preprocessing.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "5a833f1a",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "79b12dc3",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 3528 entries, 1152 to 949\n",
+      "Index: 3528 entries, 1152 to 949\n",
       "Data columns (total 7 columns):\n",
       " #   Column                  Non-Null Count  Dtype  \n",
       "---  ------                  --------------  -----  \n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b4cbba15",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "4                  24.460            51.3             4.7             8.4  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "fcc524ae",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "4007b7e7",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "26bdca83",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 3521 entries, 1152 to 949\n",
+      "Index: 3521 entries, 1152 to 949\n",
       "Data columns (total 7 columns):\n",
       " #   Column                  Non-Null Count  Dtype  \n",
       "---  ------                  --------------  -----  \n",
@@ -644,7 +644,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1512 entries, 5433 to 604\n",
+      "Index: 1512 entries, 5433 to 604\n",
       "Data columns (total 7 columns):\n",
       " #   Column                  Non-Null Count  Dtype  \n",
       "---  ------                  --------------  -----  \n",
@@ -1124,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
